setup web3  form

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,10 @@
     </section>
 
     <div class="flex flex-wrap justify-center p-12 gap-20">
-        <form class="max-w-md" name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true" onSubmit="submit"> 
+        <form action="https://api.web3forms.com/submit" method="POST" class="max-w-md">
+          
+            <input type="hidden" name="access_key" value="e26dcc29-b0de-40da-8284-08c1cbebc137">
+            
             <h1 id="slide-up" class="font-serif text-left text-[#081329] overflow-hidden font-bold text-4xl mb-20">Don't wait to have<br> your rights enforced
                 </h1>
             <h3 class="text-lg font-bold mb-2">Send a message</h3>
