--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9CS6TJXERZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9CS6TJXERZ');
+  </script>
 </head>
 <body >
   <!--LOADING SCREEN-->
@@ -97,7 +105,10 @@
      </aside>
      <div id="slide-up" class="bg-[url(./images/sacia_hero.png)] bg-no-repeat bg-center bg-cover min-[441px]:bg-contain h-[90vh] absolute bottom-[-50px] w-full"> </div>
      <div class="hidden md:block"></div>
+
 </section>
+
+
 
     <!-- ABOUT SECTION --> 
     <section class="p-6 md:p-10">
@@ -491,6 +502,11 @@
       },
       });
     </script>
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/adri202-aa', text: 'Schedule time with me', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
+<!-- Calendly badge widget end -->
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
     <script src="https://unpkg.com/lenis@1.0.45/dist/lenis.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
