--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,15 @@
       }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9CS6TJXERZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9CS6TJXERZ');
+    </script>
 </head>
 <body>
     <img src="./images/logo-blue.svg" class="h-12 w-12 fixed z-20 p-1 md:hidden"/>
