new article mobile bug fix

--- a/divorce.html
+++ b/divorce.html
@@ -80,8 +80,8 @@
         
         </section>
 
-        <section class="text-white flex flex-wrap gap-10 py-10 px-12">
-             <article class="max-w-4xl text-gray-900 text-lg pr-6">
+        <section class="text-white flex flex-wrap gap-10 p-4 md:py-10 md:px-12">
+             <article class="max-w-4xl text-gray-900 text-lg md:pr-6">
               <div class="max-w-6xl text-gray-900 text-lg ">
                
                 <p class="mb-6 text-lg font-semibold">Jamaica’s Very Sophisticated Divorce Process</p>
