land title article

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
               <!-- <button  class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase"><a class="font-bold" href="contact.html">Sale & Purchase of Land</a></button> -->
               <a href="probate.html"><button   class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase">Probate & Administration</button></a>                    
               <!-- <button  class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase"><a class="font-bold" href="contact.html">Real estate</a></button> -->
-              <a href="divorce.html"><button   class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase">Divorce</button></a>                    
+              <a href="divorce.html"><button   class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase">Divorce</button></a> 
+              <a href="title.html"><button   class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase">Land title application</button></a>                          
             </div>
         </div>       
      </aside>
@@ -289,7 +290,7 @@
     </section>
     
     <!-- FEATURED ARTICLES --> 
-    <section class="p-10 ">
+    <!-- <section class="p-10 ">
       <h2 class="mb-4 font-serif text-3xl text-black text-center w-max m-auto mb-8">Featured articles</h2> 
       <div class="flex  gap-10 justify-center flex-wrap">
         <div class="h-80 w-[28rem] md:w-72 shadow-lg shadow-blue-700/50 rounded overflow-hidden bg-white"> 
@@ -328,7 +329,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- JUDGEMENT --> 
     <section class="flex flex-col justify-center items-center bg-blue-600 p-6 md:p-10">
