new article added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     
      <aside id="slide-up" class="z-10 flex flex-wrap justify-between items-center lg:mt-32 ml-8 md:ml-24 sm:m-0 min-[666px]:m-20 md:m-0 mb-40 md:pb-0 relative">
         <div>
+            <h2 class="text-2xl text-white">welcome to the law office</h2>
             <h1  class="text-wrap text-white text-6xl mb-4 overflow-hidden mb-8">How can we help <br> you today?</h1>
             <div class="overflow-hidden">
               <!-- <button  class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase"><a class="font-bold" href="contact.html">Sale & Purchase of Land</a></button> -->
@@ -95,6 +96,8 @@
               <!-- <button  class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase"><a class="font-bold" href="contact.html">Real estate</a></button> -->
               <a href="divorce.html"><button   class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase">Divorce</button></a> 
               <a href="title.html"><button   class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase">Land title application</button></a>                          
+              <a href="wills.html"><button   class="rounded-full w-64 flex text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800  font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 uppercase">Why you need a will</button></a>                          
+
             </div>
         </div>       
      </aside>
